fixed title pushing edit off screen

--- a/react-app/src/components/UserPage/Photostream.css
+++ b/react-app/src/components/UserPage/Photostream.css
@@ -1,13 +1,14 @@
-.photo-stream-header {
+/* .photo-stream-header {
     display: flex;
     width: 1024px;
-    /* height: 100px; */
+     height: 100px;
     padding-left: 40px;
 }
 
 .photo-stream-header-date-view {
     display: flex;
 }
+
 
 
 .photo-stream-public-view {
@@ -31,7 +32,7 @@
 .photo-stream-user-container {
     display: flex;
     width: 400px;
-   
+
 }
 
 .photo-stream-user-name {
@@ -79,12 +80,12 @@
     margin-top: 100px;
 }
 
-  
+
 .photo-stream-item {
     position: relative;
     display: inline-block;
   }
-  
+
   .photo-stream-tooltip {
     position: absolute;
     top: 5%;
@@ -94,15 +95,15 @@
     background-color: rgba(0, 0, 0, 0.8);
     color: #fff;
     padding: 5px 10px;
-    /* border-radius: 4px; */
+     border-radius: 4px;
     font-size: 12px;
     white-space: nowrap;
     z-index: 1;
   }
-  
+
   .photo-stream-item:hover .photo-stream-tooltip {
     display: block;
-  }
+  } */
 
 
   /* .upsidedown-triangle {
@@ -120,7 +121,7 @@
 
 
 /* .photo-stream-header-date-uploaded {
-  
+
 } */
 
 /* .photo-stream-title {
@@ -131,5 +132,13 @@
 } */
 
 /* .photo-stream-footer-wrapper {
-     margin-top: 10px; 
+     margin-top: 10px;
 } */
+
+
+#title-name a{
+    word-wrap: break-word;
+    width: 150px;
+    display: inline-block;
+
+}
